fix: Adjust css on mobile landscape

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
           height: 30px;
           width: 30px;
           border-radius: 50%;
-          position: fixed;
+          position: absolute;
           top: calc(50% - 15px);
           left: calc(50% - 15px);
         }
@@ -52,7 +52,7 @@
           height: 100px;
           width: 18px;
           border-radius: 50%;
-          position: fixed;
+          position: absolute;
         }
         
         .paddle_1 {
@@ -79,7 +79,7 @@
           height: 50px;
           width: 50px;
           color: chartreuse;
-          position: fixed;
+          position: absolute;
           left: 30vw;
           margin-top: 30px;
         }
@@ -88,7 +88,7 @@
           height: 50px;
           width: 50px;
           color: chartreuse;
-          position: fixed;
+          position: absolute;
           left: 70vw;
           margin-top: 30px;
         }
@@ -101,16 +101,16 @@
           left: 38vw;
           margin: 30px auto auto auto;
         }
-        /* Styles pour les contrÃ´les mobiles */
+        /* Styles pour les contrôles mobiles */
         .mobile-controls {
             display: none; 
         }
         
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
     .mobile-controls {
         display: flex;
         justify-content: space-between;
-        position: fixed;
+        position: absolute;
         bottom: 20px;
         left: 0;
         right: 0;
@@ -131,7 +131,7 @@
     }
 
     .player1-controls {
-        position: fixed;
+        position: absolute;
         left: 10px;
         bottom: 60px;
         display: flex;
@@ -139,7 +139,7 @@
     }
     
     .player2-controls {
-        position: fixed;
+        position: absolute;
         right: 10px;
         bottom: 60px;
         display: flex;
@@ -155,7 +155,7 @@
     }
     
     .start-button {
-        position: fixed;
+        position: absolute;
         bottom: 20px;
         left: 50%;
         transform: translateX(-50%);
